<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".RegistroAlumnos">


    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="157dp"
                android:layout_height="88dp"
                android:layout_marginStart="126dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="126dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/appform" />

            <EditText
                android:id="@+id/txtNumCuenta"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_input_badge"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/numero_de_cuenta"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_input_person"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumCuenta" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_input_person"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtApellidos" />

            <Spinner
                android:id="@+id/cboGrado"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="84dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombre"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/cboGrupo"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toEndOf="@+id/cboGrado"
                app:layout_constraintTop_toBottomOf="@+id/txtNombre"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/cmdRegistrar"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="95dp"
                android:background="@drawable/button_rounded"
                android:text="@string/registrarse"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cboGrupo" />

            <Button
                android:id="@+id/cmdLimpiar"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:background="@drawable/button_rounded_border"
                android:text="@string/limpiar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cmdRegistrar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>