<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".ModificarDatosUso">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtNumeroDeCuentaU"
                android:layout_width="270dp"
                android:layout_height="41dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                android:autofillHints="no" />

            <EditText
                android:id="@+id/txtApellidosU"
                android:layout_width="270dp"
                android:layout_height="41dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumeroDeCuentaU"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:autofillHints="no" />

            <EditText
                android:id="@+id/txtNombreU"
                android:layout_width="270dp"
                android:layout_height="41dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtApellidosU"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                android:autofillHints="no" />

            <EditText
                android:id="@+id/txtfechaYHoraU"
                android:layout_width="270dp"
                android:layout_height="41dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreU"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:autofillHints="no" />

            <EditText
                android:id="@+id/txtImpresionesU"
                android:layout_width="270dp"
                android:layout_height="41dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/impresiones"
                android:inputType="number"
                android:text=""
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtfechaYHoraU"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="no" />

            <EditText
                android:id="@+id/txtObservacionesU"
                android:layout_width="270dp"
                android:layout_height="41dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/observaciones"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cboConceptosU"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="no" />

            <Spinner
                android:id="@+id/cboConceptosU"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtImpresionesU"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/cmdActualizarU"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_rounded"
                android:text="@string/actualizar"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtObservacionesU"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/cmdEliminarU"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_rounded_border"
                android:text="@string/eliminar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cmdActualizarU" />

            <Button
                android:id="@+id/cmdModificarU"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_rounded"
                android:text="@string/regresar"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cmdEliminarU"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>