<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="727dp"
        tools:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="141dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="141dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/formicon" />

            <EditText
                android:id="@+id/txtNumeroDeCuenta"
                android:layout_width="318dp"
                android:layout_height="48dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="150dp"
                android:ems="10"
                android:hint="@string/numero_de_cuenta"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_input_badge"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="9"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/cmdIniciarSesion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/cmdIniciarSesion"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="96dp"
                android:background="@drawable/button_rounded"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumeroDeCuenta"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/cmdRegistrarse"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="96dp"
                android:background="@drawable/button_rounded_border"
                android:text="@string/registrarse"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cmdIniciarSesion" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>